<resources>
    <string name="app_name">OpenFarmer</string>
    <string name="openfarmer_sms_verify_header">Verify your phone number</string>
    <string name="openfarmer_sms_verify_sub_header">OpenFarmer will send an SMS message to verify your phone number (carrier charges may apply)</string>
    <string name="country_code">+234</string>
    <string name="phone_number_hint">phone number</string>
    <string name="nigeria">Nigeria</string>
    <string name="send_sms">Send SMS</string>
    <string name="code">code</string>
    <string name="country">country</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="wrong_number">wrong number?</string>
    <string name="sms_verify_sub_header">waiting to automatically detect SMS code sent to</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="count_down_time">3:00</string>
    <string name="what_is_your_profession">What is your profession?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="no_internet_connection">You are offline. \nPlease check your Internet connection.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_des">image</string>
    <string name="no_news">No News</string>
    <string name="search_hint">Search Crop</string>
    <string name="app_label">OpenFarmer</string>
    <string name="title_avocado">Avocado</string>
    <string name="advise">Advise</string>
    <string name="attacks">Attacks</string>
    <string name="about">About</string>
    <string name="title_activity_crop_story">CropStory</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="avocado_introduction_body">
        <b>Avocado</b>, Persea americana, is an evergreen tree in the family Lauraceae which is grown for its nutritious fruit, the avocado.\n\n
        The avocado tree is large and dome shaped with oval or elliptical leaves arranged in a spiral on the tips of branches. \n\n
        The leaves have a red pigmentation when they first emerge and turn green as they mature. Avocado trees produce clusters of small, green-yellow flowers at the end of
        twigs and a large, fleshly, pear-shaped fruit with a single large seed. \n\n
        The fruits can be purple to green in color with smooth or warty skin depending on variety. The flesh of the fruit is yellow-green in color and has the consistency of butter.
        Each fruit contains one large seed. \n\n
        Avocado trees grown from seed can take 4-6 years to produce fruit whereas grafted plants may produce fruit within 1-2 years. The tree can reach a height of 20m (65.6ft) and originated in the rainforests
        of central America.
    </string>
    <string name="avocado_cultivation_body">
        <b>Propagation:</b>\n\n
        Avocados are commonly propagated from seeds but the seeds will not breed true to type and this should be taken into consideration before planting.\n\n
        Clonal plants are obtained from budding and grafting from a parent tree to ensure the offspring are of the sam high quality of the parent. In plantations, seeds can be sown directly
        in the soil. 2 to 3 seeds are usually sown and thinned later to leave the strongest seedling for grafting.\n\n
        Seeds may also be sown in containers and grown for 2 to 3 months before planting at the final site.\n\n

        <b>Planting:</b>\n\n
        Avocado seedling should ideally be planted in the Spring when the soil has warmed through. Choose a location that receives full sun and has protection from the wind.\n\n
        The trees should be planted by digging a hole a little wider than the root ball and gently easing the tree into the hole. Slow release fertilizer can be added to the hole at planting but
        is not necessary.\n\n
        Care should be taken not to disturb the roots as much as possible and the hole should be carefully backfilled and the soil and tamped to prevent dislodging. Trees should be planted 4.5 to 6m
        (15-20 ft) apart in rows spaced 6m (20 ft) apart.\n\n
    </string>
    <string name="avocado_requirements_body">
        Avocados thrive in subtropical or tropical climates but can also be grown successfully in cooler areas of the world.\n\n

The optimum temperature for growing avocado is between 25 and 33°C (77–91.4°F) with moderate humidity levels.\n\n

Once established, trees can tolerate temperatures down to around -2°C (28°F) with minimal damage but young trees will not tolerate freezing temperatures.\n\n

Avocado requires a well-draining, aerated soil and they produce a shallow root system which require a warm soil for efficient water and nutrient uptake.\n\n

Although trees will tolerate low rainfall, irrigation, particularly during flowering and fruit set, will ensure high fruit yields.\n\n

    </string>
</resources>