<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".auth.VerifyPhoneNumber">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/verify_phone_number_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="2dp"
            android:gravity="center"
            android:text="@string/verify_your_phone_number"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sms_code_sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_below="@id/verify_phone_number_header"
            android:text="@string/sms_verify_sub_header"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            />


        <TextView
            android:id="@+id/wrong_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_code_sub_header"
            android:gravity="center"
            android:text="@string/wrong_number"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_marginTop="24dp"/>

        <LinearLayout
            android:layout_below="@id/wrong_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:gravity="center">
                <com.chaos.view.PinView
                    android:id="@+id/firstPinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    app:itemHeight="40dp"
                    app:itemSpacing="10dp"
                    app:itemWidth="40dp"
                    app:lineColor="@color/white"
                    app:lineWidth="1dp"
                    app:viewType="line" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">


                <TextView
                    android:id="@+id/count_down_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:text="@string/count_down_time"
                    android:fontFamily="sans-serif-condensed"
                    android:padding="2dp"
                    android:textColor="@color/white"/>


                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                    android:id="@+id/resend_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_sms"
                    android:textColor="@color/grey"
                    android:layout_marginTop="12dp"
                    android:enabled="false"
                    android:layout_below="@id/count_down_timer"
                    android:layout_centerHorizontal="true"
                    android:drawableTop="@drawable/icon_sms"
                    />
            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>



</androidx.core.widget.NestedScrollView>